# tank-engine

./: .gitignore  .gitmodules  Application.make  CMakeLists.txt  Engine.make  README.md  apt-packages.txt  build.py  build_and_run_linux.sh  build_linux.sh  compileData.scor  compileData.scor.t0000  compile_commands.events.json  gmake_build.sh  gmake_build_run.sh  gmake_run.sh  imgui.ini  premake5.lua  requirements.txt  run.sh  run_linux.sh  run_player.sh  scene.json  scene.scn  test.bat
.github/workflows/: test_build.yml
Application/: CMakeLists.txt  imgui.ini  test.scene
Application/src/: application.cpp  application.hpp  core.hpp  editor.cpp  editor.hpp  file.hpp  framebuffer.cpp  key_input.cpp  key_input.hpp  log.cpp  mesh.cpp  mesh.hpp  scene_serialisation.cpp  scene_serialisation.hpp  serialisation.cpp  serialisation.hpp  shader.cpp  shader.hpp  shader_source.cpp  shader_source.hpp  texture.cpp  texture.hpp  transform.cpp  transform.hpp  transformation.hpp  widget.cpp  widget.hpp
Application/src/nodes/: camera.cpp  cube_map.cpp  cube_map.hpp  light.cpp  light.hpp  model.cpp  model.hpp  node.cpp  scene.cpp  scene.hpp  sprite.cpp  sprite.hpp
Application/src/nodes/interfaces/: editor_only.hpp  mesh_container.cpp  mesh_container.hpp  outlined.cpp  outlined.hpp  shader_container.cpp  shader_container.hpp
Application/src/nodes/physics/: collider.hpp  mesh_collider.cpp
Application/src/nodes/ui/: console.cpp  console.hpp  file_dialog.cpp  file_dialog.hpp  hierarchy.cpp  hierarchy.hpp  inspector.cpp  inspector.hpp  scene_view.cpp  scene_view.hpp  ui.hpp  window.cpp  window.hpp
Application/src/scripting/: script_engine.cpp  script_engine.hpp  script_glue.cpp  script_glue.hpp
Application/src/shapes/: collision_shape.hpp  vertex.hpp
Application/src/static/: glm_serialise.hpp
CoreAssets/models/: Attribution.md
CoreAssets/shaders/: shader.frag
DemoProject/: imgui.ini  scene.json
DemoProject/assets/: scene.json
DemoProject/scripts/: player.lua
Editor/: Credits.txt  Roadmap.txt
Editor/src/: editor.cpp  editor.hpp  framebuffer.hpp
Engine/: CMakeLists.txt
Engine/src/: application.cpp  application.hpp  colours.hpp  core.hpp  entry_point.hpp  file.cpp  file.hpp  framebuffer.hpp  key_input.cpp  key_input.hpp  mesh.hpp  quad_mesh.cpp  quad_mesh.hpp  serialisation.hpp  tepch.hpp  texture.cpp  texture.hpp  transformation.hpp
Engine/src/assets/: asset.hpp  asset_database.cpp  asset_database.hpp
Engine/src/nodes/: camera.cpp  camera.hpp  cube_map.cpp  editor_node.cpp  editor_node.hpp  light.hpp  model.hpp  node.cpp  node.hpp  scene.hpp  sprite.cpp  sprite.hpp
Engine/src/nodes/interfaces/: mesh_container.hpp  outlined.cpp  outlined.hpp  serialisable.hpp
Engine/src/nodes/physics/: collider.cpp  collider.hpp  physics_body.cpp  physics_body.hpp
Engine/src/nodes/ui/: scene_view.cpp  scene_view.hpp  window.cpp  window.hpp
Engine/src/scripting/: script.cpp
Engine/src/shapes/: collision_sphere.hpp
Engine/src/static/: constant.hpp  math.hpp
Player/src/: player.cpp  player.hpp
TBA/scripting/: script_engine.hpp
Tank-ScriptCore/: CMakeLists.txt
Tank-ScriptCore/Source/: Transform.cs
TankCSharpBindings/Source/: Node.cs
TankCSharpHost/: premake5.lua
TankEditor/: Notes.txt  imgui.ini  premake5.lua
TankEditor/src/: editor.cpp  editor.hpp  editor_root.cpp  editor_root.hpp  widget.cpp  widget.hpp
TankEngine/: premake5.lua  tepch.hpp
TankEngine/include/: stb_image.h
TankEngine/src/: application.cpp  application.hpp  audio_engine.cpp  audio_engine.hpp  engine.hpp  entry_point.hpp  file.cpp  file.hpp  framebuffer.cpp  framebuffer.hpp  key_input.cpp  key_input.hpp  log.cpp  log.hpp  mesh.cpp  mesh.hpp  scene_serialisation.cpp  scene_serialisation.hpp  (+12 more)
TankLuaDocs/: KeyInput.lua  autogen.lua  camera.lua  fields.lua  key_input.lua  node.lua  transform.lua  vec3.lua
TankPlayer/: premake5.lua
TankScriptCore/: Tank-ScriptCore.csproj
export/: scene.json
lib/: assimp_copyright  freetype.lib  nfd_d.lib
premake/: command.lua  common.lua  links.lua  os_type.lua  outdir.lua  project.lua
scripts/: player.lua  template.lua  test.lua
shaders/: shader.frag  shader.vert  skybox.frag  skybox.vert
test/: imgui.ini  project.tank
tests/: Dockerfile  run_tests.bat
(+172 files in other folders)
